# Renderer

./: .cproject  .gitignore  CMakeLists.txt  CMakePresets.json  hvector.h  main.cpp  transform.h  vector2.h
drawing_test/: build.txt  main.cpp
include/: .matrix_stack.h.swp  color.h  draw_routines.h  graphics_lib.h  image.h  matrix.h  matrix_stack.h  projection.h  projection_setter.h  rgb.h  transform_matrix.h  vector2.h  vector3.h  vector3H.h  vector3h.h  vertex.h  window.h
include/graphics_lib/: color.h  draw_routines.h  drawlib.h  graphics_lib.h  image.h  matrix_stack.h  projection.h  transform_matrix.h  vector2.h  window.h
pixeltoaster/: ExampleDrawLine  ExampleDrawLine.cpp  ExampleFloatingPoint  ExampleFullscreen  ExampleImage  ExampleKeyboardAndMouse  ExampleMultiDisplay  ExampleTimer  ExampleTrueColor
pixeltoaster/archive/: ExampleFullscreen  ExampleKeyboardAndMouse  ExampleTimer  ExampleTrueColor
python_port/drawing_test/: application.cpp  application.h  build_cmd.txt  drawing_test.cpp  drawlib.cpp  drawlib.h  initials.cpp  matlib.cpp  matlib.h  todo.txt
src/: .matrix_stack.cpp.swp  GraphicsAreFun  Makefile  color.cpp  draw_routines.cpp  graphics_lib.cpp  main.cpp  main_web.cpp  matrix.cpp  matrix_stack.cpp  projection.cpp  test_mat_mult.cpp  test_mat_mult_bld_cmd.txt  transform_matrix.cpp  vector2.cpp  vector3.cpp  vector3H.cpp  vector3h.cpp  vertex.cpp
src/GraphicsAreFun.dSYM/Contents/: Info.plist
src/GraphicsAreFun.dSYM/Contents/Resources/DWARF/: GraphicsAreFun
src/basic_rendering/: CMakeLists.txt  draw_line.cpp  draw_triangle.cpp
src/graphics_lib/: draw_routines.cpp  drawlib.cpp  graphics_lib.cpp  image.cpp  matrix_stack.cpp  projection.cpp  projection_setter.cpp  vector2.cpp  vector3.cpp  window.cpp
test/: CMakeLists.txt  Makefile  runTests  test_main.cpp
test/test_include/: color_test.h  draw_routines_test.h  graphics_lib_test.h  matrix_stack_test.h  matrix_test.h  transform_matrix_test.h  vector2_test.h  vector3_test.h
test/test_src/: .vector3_test.cpp.swp  color_test.cpp  draw_routines_test.cpp  graphics_lib_test.cpp  matrix_stack_test.cpp  matrix_test.cpp  transform_matrix_test.cpp  vector2_test.cpp  vector3_test.cpp
