cmake_minimum_required(VERSION 3.14)
project(software_renderer)

# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
  software_renderer_test 
  test/test_src/color_test.cpp
)
target_link_libraries(
  software_renderer_test
  GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(software_renderer_test)
